# pypsa-usa

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-ci.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .sync-receive  .sync-send  .syncignore-receive  .syncignore-send  .test_sh  CITATION.cff  CITE.bib  LICENSE.md  README.md  Snakefile  Snakefile~  ToDos.txt  config.yaml  environment.yaml  init_pypsa_usa.sh  matplotlibrc  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  docs.yaml  feature_request.yaml
.github/workflows/: main.yml
.snakemake/metadata/: bmV0d29ya3MvZWxlY19zLm5j  bmV0d29ya3MvZWxlYy5uYw==
config/: config.pypsa-eur.yaml  config.yaml
docs/: requirements.txt
docs/source/: about-install.md  about-introduction.md  about-tutorial.md  about-usage.md  api-reference.md  conf.py  config-assumptions.md  config-co2-base.md  config-configuration.md  config-sectors.md  config-spatial.md  config-wildcards.md  contributing.md  data-costs.md  data-demand.md  data-generators.md  data-industrial.md  data-naturalgas.md  data-policies.md  data-renewables.md  data-sectors.md  data-services.md  data-transmission.md  data-transportation.md  index.md  license.md  publications.bib  publications.md  quick-start.md  rules-build-network.md  rules-build-sector-network.md  rules-retrieving-data.md  rules-simplify.md  rules-solve.md  rules-summary.md
docs/source/_static/: pypsa-usa.drawio
docs/source/configtables/: atlite.csv  clustering.csv  co2.csv  costs.csv  dac.csv  electricity.csv  emissions.csv  lines.csv  links.csv  onwind.csv  opts.csv  plotting.csv  run.csv  scenario.csv  sector.csv  sector_carbon.csv  sector_heating.csv  sector_industrial.csv  sector_natural_gas.csv  sector_service.csv  sector_transport.csv  solar.csv  solving.csv
docs/source/datatables/: demand.csv  generators.csv  industrial_sector_data.csv  industrial_sector_techs.csv  natural_gas.csv  natural_gas_components.csv  natural_gas_sources.csv  natural_gas_trade.csv  policies.csv  renewables.csv  sector_natural_gas.csv  sector_service_chars.csv  sector_service_techs.csv  service_sector_data.csv  service_sector_techs.csv  transmission.csv  transmission_nodes.csv  transport_sector_data.csv
report/: report.tex
report/sections/: introduction.tex
scripts/: add_co2.py  cluster_network.py  create_network.py  create_network.py~  create_network_from_powersimdata.py  create_network_from_zenodo.py  network_snippet.py  retrieve_data_from_zenodo.py  retrieve_databundle.py  simplify_network.py  storage.py
slurm/: run_sherlock.sh
src/pypsa_usa/: __init__.py
src/pypsa_usa/api/: __init__.py  workflow.py
src/pypsa_usa/workflow/: Snakefile  __init__.py  _paths.py
tests/: README.md  conftest.py  run_tests.py
tests/api/: README_TESTS.md  conftest.py  test_environment_handling.py  test_workflow.py  test_workflow_usage.py
tests/workflow/: conftest.py
tests/workflow/fixtures/: multi_region_prm.csv  technology_capacity_targets.csv
workflow/: README.md  Snakefile  cost_test.csv  run_slurm.sh  test.csv
workflow/config/: config.api.yaml  config.base_osw.yaml  config.cluster.yaml  config.common.yaml  config.common_r.yaml  config.default.r.yaml  config.default.yaml  config.default_r.yaml  config.egs.yaml  config.mod_default.yaml  config.osw.yaml  config.plotting.yaml  config.tutorial.yaml  config.validate.yaml  config.validation.yaml  config.yaml
workflow/config/policy_constraints/: SAFE_regional_prm.csv  agg_p_nom_minmax.csv  portfolio_standards.csv  regional_Co2_limits.csv  transmission_interface_limits.csv
workflow/config/tests/: config.test.yaml  config.test_opts.yaml  config.test_simple.yaml  config.validation.yaml
workflow/envs/: dev.yaml  environment.yaml  requirements.txt  requirements_sherlock.txt
workflow/geodata_repo/BE_BA_shapes/: remap_ba_area.dbf  remap_ba_area.shx
workflow/geodata_repo/California_Building_Climate_Zones/: Building_Climate_Zones.shx
workflow/geodata_repo/California_Electric_Balancing_Authority_Areas/: Balancing_Authority.shp
workflow/geodata_repo/Offshore_Wind_Speed_90m/: Offshore_Wind_Speed_90m.csv  Offshore_Wind_Speed_90m.dbf  (+2 more)
workflow/notebooks/: Analyze_Networks.ipynb  FullNetworkPCS.ipynb  PCSimulations.ipynb  build_cutout.ipynb  data_validation.ipynb  efs.ipynb  eia_pudl_comparison.ipynb  elec_ss_buses.csv  elec_ss_lines_gis.csv  godeep.ipynb  historical_emissions.ipynb  load_validatiaon.ipynb  missing_gps_pudl.ipynb  plant_matching.ipynb  plot-results.py.ipynb  plot_cutout.ipynb  plot_results.py.ipynb  withTypeLines.csv  woTypeLines.csv
workflow/repo_data/: CEC_Wind_BaseScreen_epsg3310.tif  Offshore_Wind_CEC_PLEXOS_2030.csv  ads_plants_locs.csv  agg_p_nom_minmax.csv  dag.dot  eia_plants.csv  eia_plants_wecc.csv  ercot_cap_2030.csv  pypsa_eur_costs.csv  pypsa_usa_costs.csv  regional_Co2_limits.csv
workflow/rules/: build_electricity.smk  build_sector.smk  common.smk  postprocess.smk  postprocess_sector.smk  retrieve.smk  solve_electricity.smk  solve_myopic.smk  validate.smk
workflow/scripts/: _helpers.py  add_demand.py  add_electricity.py  add_extra_components.py  add_geothermal.py  add_network.py  add_sector_techs.py  add_sectors.py  additional_policy_constraints.py  build_base_network.py  build_bus_regions.py  build_clustered_population_layouts.py  build_co2_storage.py  build_co2_tracking.py  build_cop_profiles.py  build_cost_data.py  build_cutout.py  build_cutout_earth.py  build_demand.py  build_demand_new.py  build_efs_costs.py  build_electricity_sector.py  build_emission_tracking.py  build_fuel_prices.py  build_heat.py  build_heat_demands.py  build_hourly_heat_demand.py  build_hydro_profile.py  build_load_data.py  build_natural_gas.py  build_network.py  build_population_layouts.py  build_powerplant.py  build_powerplants.py  build_renewable_profiles.py  build_sector_costs.py  build_shapes.py  build_stock_data.py  build_temperature_profiles.py  build_transportation.py  (+68 more)
workflow/sherlock/: config.yaml  run_sherlock.sh
workflow/slurm/: run_slurm.sh
workflow/tests/: test_yaml_structure.py
(+194 files in other folders)
