[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPSA-USA"
dynamic = ["version"]
authors = [
    { name = "Kamran Tehranchi", email = "ktehranchi@stanford.edu" },
    { name = "Trevor Barnes", email = "trevor_barnes@sfu.ca" },
]
description = "PyPSA-USA"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: MIT License",
    "Topic :: Energy Systems Modeling",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.11, <3.12.0"
dependencies = [
    "atlite==0.3.0",
    "cartopy==0.23.0",
    "dask==2024.12.0",
    "dask-expr==1.1.20",
    "descartes==1.1.0",
    "dill>=0.3.9",
    "distributed==2024.12.0",
    "duckdb==0.10.0",
    "geopandas==1.0.1",
    "geopy==2.4.0",
    "graphviz>=0.20.3",
    "gurobipy==11.0.3",
    "highspy>=1.9.0",
    "linopy==0.3.14",
    "matplotlib==3.8.0",
    "netcdf4==1.6.4",
    "networkx==3.1",
    "numpy==1.26.0",
    "openpyxl==3.1.2",
    "pandas==2.2.2",
    "plotly==5.17.0",
    "pre-commit>=4.1.0",
    "progressbar2==4.3.2",
    "pulp==2.7.0",
    "pyarrow==16.1.0",
    "pycountry==22.3.5",
    "pyomo==6.6.1",
    "pypsa==0.30.2",
    "pyyaml>=6.0.2",
    "rasterio==1.3.8",
    "scipy==1.11.3",
    "seaborn==0.13.2",
    "shapely==2.0.2",
    "snakemake==7.32.4",
    "tsam>=2.3.6",
    "xarray==2024.9.0",
    "xlrd==2.0.1",
]


[project.urls]
Documentation = "https://pypsa-usa.readthedocs.io/en/latest/"
Issues = "https://github.com/PyPSA/pypsa-usa/issues"
Source = "https://github.com/PyPSA/pypsa-usa"

[project.optional-dependencies]
dev = [
    "bump2version",
    "ipython",
    "pudb",
    "mypy~=1.11.0",
    "pre-commit",
    "ruff~=0.5.2",
    "types-PyYAML",
    "sphinx-autobuild",
    "sphinx",
    "sphinx-book-theme",
    "myst-parser",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pypsa_usa = [
    "data/repo_data/**/*",
    "workflow/config/*.yaml",
    "workflow/rules/*.smk",
    "workflow/scripts/*.py",
    "workflow/scripts/opts/*.py",
    "workflow/scripts/test/*.py",
    "workflow/scripts/test/fixtures/*.csv",
    "workflow/Snakefile"
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "TD",  # flake-8 todos
    #"PD",  # pandas vet
    "RUF", # Ruff rules
    "N",   # pep8
    "F",   # pyflakes
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "C90", # Complex code
    "I",   # isort (import sorting)
]
mccabe.max-complexity = 10

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
extend-ignore = [
    "D105",  # Ignore: Missing docstring in magic methods (__init__, __str__, etc.).
    "D107",  # Ignore: Missing docstring in __init__ method.
    "D205",  # Ignore: 1st line of docstring should be separated from the summary with a blank line.
    "D415",  # Ignore: First line of a docstring should end with a period, question mark, or exclamation mark.
    "D401",  # Ignore: First line of a docstring should be in imperative mood (e.g., "Get" instead of "Gets").
    "D419",  # Ignore: Empty docstrings should not be allowed.
    "D103",  # Ignore: Missing docstring in a public function.
    "TD002", # Ignore: TODO comments should have an author name (e.g., "# TODO (John): Fix this").
    "TD003", # Ignore: TODO comments should have a specific issue/task reference.
    "PD010", # Ignore: `df.isna().sum()` should be replaced with `df.isnull().sum()` (allows both styles).
    "PD901", # Ignore: Avoid using `df` as a variable name for Pandas DataFrames (allows using `df`).
    "C901",  # Prevents Ruff from auto-fixing overly complex functions.
    "N802",  # Function naming lower case
    "E501"
]

pydocstyle.convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = [
    "src/pypsa_usa/workflow/scripts/test"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
]
